--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,7 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Noot Noot Food !{% endblock %}
-
+{% block stylesheets %}
+    {{ encore_entry_link_tags('Accueil') }}
+{% endblock %}
 {% block body %}
-
+<div class="container-fluid">
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+    <div class="row">
+        <div class="col-5 col-md-3 menu">
+            .col-6 .col-md-4
+        </div>
+        <div class="col col-md-9 choix">
+            .col .col-md-8
+        </div>
+    </div>
 {% endblock %}
