--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MessageController!{% endblock %}
+{% block title %}Message envoyé !{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<body class="pop-up">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div id="pop-up">
+    <!-- <img src="images/cross.png"> -->
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/LaCosaNostra/Desktop/NootNootFood/src/Controller/MessageController.php'|file_link(0) }}">src/Controller/MessageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/LaCosaNostra/Desktop/NootNootFood/templates/message/index.html.twig'|file_link(0) }}">templates/message/index.html.twig</a></code></li>
-    </ul>
+    <div class="container">
+        <h1>VOTRE MESSAGE A BIEN ETE ENVOYE</h1>
+        <p>Message de la part de <strong>4 meufs</strong> et <strong>2 gars</strong>.</p>
+        <p><strong>MERCI !</strong></p>
+        <div class="cross" ><i class="fa fa-times" style="color: #fff;"></i></div>
+    </div>
 </div>
+
+</body>
 {% endblock %}
