--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3,3 +3,12 @@
 body {
     background-color: $white;
 }
+
+header{
+    background-image: url("/image/trianglify.png");
+    background-size: 100%;
+}
+
+.background-orange{
+    background-color: $orange;
+}
