--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Noot Noot Food !{% endblock %}
-{% block stylesheets %}
-    {{ encore_entry_link_tags('Accueil') }}
-{% endblock %}
+
 {% block body %}
 <div class="container-fluid">
     <!-- Stack the columns on mobile by making one full-width and the other half-width -->
     <div class="row">
-        <div class="col-md-3 menu">
+        <div class="col-md-3 menu background-orange">
             SELECTION
         </div>
         <div class="col-md-9 choix">
