--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -14,27 +14,27 @@
                 <div class="row">
                     {% for menu in menus %}
                         <div class="col-md-4 mt-5">
-                            <!-- Card -->
-                            <div class="card">
-                                <!-- Card image -->
-                                <div class="view overlay">
-                                    <img class="card-img-top"
-                                         src="{{ menu.image }}"
-                                         alt="image">
-                                    <div class="mask rgba-white-slight"></div>
-                                    </a>
-                                </div>
-                                <!-- Card content -->
-                                <div class="card-body">
-                                    <!-- Title -->
-                                    <h4 class="card-title">{{ menu.title }}</h4>
-                                    <!-- Text -->
-                                    <p class="card-text">{{ menu.description }}</p>
-                                    <!-- Button -->
-                                    <a href="#" class="btn btn-primary">Button</a>
-                                </div>
-                            </div>
-                            <!-- Card -->
+                            <div class="card-container">
+                                <div class="card">
+                                    <div class="front">
+                                        <div class="cover">
+                                            <img src="{{ menu.image }}"/>
+                                        </div>
+                                        <div class="content">
+                                            <div class="main">
+                                                <h3 class="name">{{ menu.title }}</h3>
+                                            </div>
+                                        </div>
+                                    </div> <!-- end front panel -->
+                                    <div class="back">
+                                        <div class="content">
+                                            <div class="main">
+                                                <h4 class="text-center">{{ menu.description }}</h4>
+                                            </div>
+                                        </div>
+                                    </div> <!-- end back panel -->
+                                </div> <!-- end card -->
+                            </div> <!-- end card-container -->
                         </div>
                     {% endfor %}
                 </div>
