--- a/templates/scrap/index.html.twig
+++ b/templates/scrap/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}{% endblock %}
 
 {% block body %}
- {# {{dump(client)}}
+{{dump(clienti)}}
 
-{% for clients in client %}
-    {{client}} 
-{% endfor %} #}
+{% for clientis in clienti %}
+    {{clientis}} 
+{% endfor %} 
 {% endblock %}
