debut chzckboxes + bouton commande

--- a/assets/scss/app.css
+++ b/assets/scss/app.css
@@ -14,4 +14,9 @@ header {
   border-right: 5px dashed #fc965a;
 }
 
+.btn {
+  background-color: #fc965a !important;
+  color: #fff8f0 !important;
+}
+
 /*# sourceMappingURL=app.css.map */
