--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -15,3 +15,7 @@ header{
 .background-orange{
     border-right: 5px dashed $orange;
 }
+.btn {
+   background-color: $orange !important;
+   color: $white !important;
+}
