--- a/assets/scss/rotating-card.scss
+++ b/assets/scss/rotating-card.scss
@@ -119,7 +119,7 @@ body {
     padding: 10px 20px 20px;
 }
 .card .content .main {
-    min-height: 160px;
+    min-height: 90px;
 }
 .card .back .content .main {
     height: 215px;
@@ -315,4 +315,7 @@ body {
         z-index: 5;
         visibility: visible;
     }
+}
+.menuDescription{
+  max-height: 120px;
 }
