--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -39,7 +39,7 @@
                                                         <br><br>
                                                         <hr>
                                                         <!-- Button -->
-                                                        <a href="#" class="btn btn-orange">
+                                                        <a href="{{ path('') }}" class="btn btn-orange">
                                                             J'ai les crocs,<br>je commande ça !
                                                         </a>
                                                     </h4>
