bouton + couleurs ok

--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -7,12 +7,19 @@
 
 <div id="pop-up">
     <!-- <img src="images/cross.png"> -->
-
     <div class="container">
         <h1>VOTRE MESSAGE A BIEN ETE ENVOYE</h1>
         <p>Message de la part de <strong>4 meufs</strong> et <strong>2 gars</strong>.</p>
         <p><strong>MERCI !</strong></p>
         <div class="cross" ><i class="fa fa-times" style="color: #fff;"></i></div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row justify-content-end">
+        <div class="submit-wrapper justify-content-end">
+            <a href="{{ path('accueil') }}">ACCUEIL</a>
+        </div>
     </div>
 </div>
 
