--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,11 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <img class="pt-4 w-25" src="{{ asset('image/logo_nootnoot.png') }}" alt="logo">
             </div>
+            <div class="row justify-content-end">
+                <div class="submit-wrapper justify-content-start">
+                    <a href="{{ path('accueil') }}">ACCUEIL</a>
+                </div>
+            </div>
         </div>
     </div>
 </header>
