--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -7,7 +7,7 @@
 
 <div id="pop-up">
     <!-- <img src="images/cross.png"> -->
-    <div class="container">
+    <div class="container message">
         <h1>VOTRE MESSAGE A BIEN ETE ENVOYE</h1>
         <p>Message de la part de <strong>4 meufs</strong> et <strong>2 gars</strong>.</p>
         <p><strong>MERCI !</strong></p>
