--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -28,3 +28,13 @@ footer{
    background-color: $orange !important;
    color: $white !important;
 }
+
+p {
+  font-family: calibri, sans-serif !important;
+  font-weight: normal !important;
+}
+
+h4 {
+  font-family: calibri, sans-serif !important;
+  font-weight: normal !important;
+}
