--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -7,13 +7,35 @@
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
         <div class="row">
             <div class="col-md-3 menu background-orange">
-                <!-- Material unchecked -->
-                {% for menu in menus %}
-                    <div class="form-check text-center pt-3">
-                        <input type="checkbox" class="form-check-input" id="materialUnchecked">
-                        <label class="form-check-label" for="materialUnchecked">Material unchecked</label>
-                    </div>
-                {% endfor %}
+                <button class="btn peach-gradient">
+                    <a href="{{ path('categorie/{tag:pizza}') }}">
+                        <i class="fas fa-pizza-slice"></i>
+                        &nbsp;&nbsp;Toutes les pizzas
+                    </a>
+                </button>
+                <button class="btn blue-gradient">
+                    <a href="{{ path('categorie/{tag:sushi}') }}">
+                        <i class="fas fa-fish"></i>
+                        &nbsp;&nbsp;Tous les sushis
+                    </a>
+                </button>
+                <button class="btn lady-lips-gradient">
+                    <a href="{{ path('categorie/{tag:burger}') }}">
+                        <i class="fas fa-hamburger"></i>
+                        &nbsp;&nbsp;Tous les burgers
+                    </a>
+                </button>
+                <button class="btn tempting-azure-gradient">
+                    <a href="{{ path('categorie/{tag:salade}') }}">
+                        <i class="fas fa-carrot"></i>
+                        &nbsp;&nbsp;Toutes les salades
+                    </a>
+                </button>
+                <button class="btn ripe-malinka-gradient">
+                    <a href="{{ path('categorie/{tag:dessert}') }}">
+                        <i class="fas fa-cookie-bite"></i>
+                        &nbsp;&nbsp;Tous les desserts
+                </button>
             </div>
             <div class="col-md-9 choix">
                 <div class="container">
