--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -7,34 +7,23 @@
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
         <div class="row">
             <div class="col-md-3 menu background-orange">
-                <button class="btn peach-gradient">
-                    <a href="{{ path('categorie/{tag:pizza}') }}">
+                <button class="mt-3 btn peach-gradient btn-select">
+                    <a href="{{ path('tag_plat', {tag:'pizza'}) }}">
                         <i class="fas fa-pizza-slice"></i>
                         &nbsp;&nbsp;Toutes les pizzas
                     </a>
                 </button>
-                <button class="btn blue-gradient">
-                    <a href="{{ path('categorie/{tag:sushi}') }}">
+                <button class="mt-3 btn blue-gradient btn-select">
+                    <a href="{{ path('tag_plat', {tag:'sushi'}) }}">
                         <i class="fas fa-fish"></i>
                         &nbsp;&nbsp;Tous les sushis
                     </a>
                 </button>
-                <button class="btn lady-lips-gradient">
-                    <a href="{{ path('categorie/{tag:burger}') }}">
+                <button class="mt-3 btn lady-lips-gradient btn-select">
+                    <a href="{{ path('tag_plat', {tag:'burger'}) }}">
                         <i class="fas fa-hamburger"></i>
                         &nbsp;&nbsp;Tous les burgers
                     </a>
-                </button>
-                <button class="btn tempting-azure-gradient">
-                    <a href="{{ path('categorie/{tag:salade}') }}">
-                        <i class="fas fa-carrot"></i>
-                        &nbsp;&nbsp;Toutes les salades
-                    </a>
-                </button>
-                <button class="btn ripe-malinka-gradient">
-                    <a href="{{ path('categorie/{tag:dessert}') }}">
-                        <i class="fas fa-cookie-bite"></i>
-                        &nbsp;&nbsp;Tous les desserts
                 </button>
             </div>
             <div class="col-md-9 choix">
