--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -29,28 +29,28 @@
             <div class="col-md-9 choix">
                 <div class="container">
                     <div class="row">
-                        {% for menu in menus %}
+                        {% for plat in plats %}
                             <div class="col-md-4 mt-5">
                                 <div class="card-container">
                                     <div class="card">
                                         <div class="front">
                                             <div class="cover">
-                                                <img src="{{ menu.image }}"/>
+                                                <img src="{{ plat.image }}"/>
                                             </div>
                                             <div class="content">
                                                 <div class="main">
-                                                    <h3 class="name">{{ menu.title }}</h3>
+                                                    <h3 class="name">{{ plat.nom }}</h3>
                                                 </div>
                                             </div>
                                         </div> <!-- end front panel -->
                                         <div class="back">
                                             <div class="content">
                                                 <div class="main">
-                                                    <h4 class="text-center mt-3 menuDescription">{{ menu.description }}
+                                                    <h4 class="text-center mt-3 menuDescription">{{ plat.description }}
                                                         <br><br>
                                                         <hr>
                                                         <!-- Button -->
-                                                        <a href="{{ path('menu', {'id':menu.id}) }}" class="btn btn-orange">
+                                                        <a href="{{ path('plat', {'id':plat.id}) }}" class="btn btn-orange">
                                                             J'ai les crocs,<br>je commande ça !
                                                         </a>
                                                     </h4>
