--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 pt-5 d-flex justify-content-center">
-                        <h2>{{ plats.title }}</h2>
+                        <h2>{{ plats.nom }}</h2>
                         </div>
                     </div>
                 <div class="row">
