modification bouton de sélection

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,13 +13,13 @@
                         &nbsp;&nbsp;Toutes les pizzas
                     </a>
                 </button>
-                <button class="mt-3 btn blue-gradient btn-select">
+                <button class="mt-3 btn peach-gradient btn-select">
                     <a href="{{ path('tag_plat', {tag:'sushi'}) }}">
                         <i class="fas fa-fish"></i>
                         &nbsp;&nbsp;Tous les sushis
                     </a>
                 </button>
-                <button class="mt-3 btn lady-lips-gradient btn-select">
+                <button class="mt-3 btn peach-gradient btn-select">
                     <a href="{{ path('tag_plat', {tag:'burger'}) }}">
                         <i class="fas fa-hamburger"></i>
                         &nbsp;&nbsp;Tous les burgers
