--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -39,6 +39,12 @@ h4 {
   font-weight: normal !important;
 }
 
+h2 {
+  font-family: calibri, sans-serif !important;
+  font-weight: normal !important;
+  color: $dark !important;
+}
+
 .btn-select {
   color: $white;
 
