--- a/assets/scss/message.css
+++ b/assets/scss/message.css
@@ -159,4 +159,58 @@ button {
   font-weight: bold;
 }
 
+.submit-wrapper2 {
+  margin-top: 50px;
+  justify-items: center;
+}
+
+.submit-wrapper2 a {
+  box-shadow: 10px 5px 5px #868686;
+  border: 2px solid #9dd9d2;
+  color: #000;
+  padding: 20px 25px;
+  text-decoration: none;
+  position: relative;
+  letter-spacing: 8px;
+  transition: all 0.6s;
+  z-index: 1;
+}
+
+.submit-wrapper2 a:before,
+.submit-wrapper2 a:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 24px;
+  height: 4px;
+  background: #9dd9d2;
+  margin-left: -12px;
+  margin-top: -2px;
+  transition: all 0.6s;
+}
+
+.submit-wrapper2 a:after {
+  left: auto;
+  right: 0;
+  margin-right: -12px;
+}
+
+.submit-wrapper2 a:hover:before,
+.submit-wrapper2 a:hover:after {
+  width: 100%;
+  transition: all 0.6s;
+  background: #fff;
+  transform: scaleY(5);
+  z-index: -1;
+}
+
+.submit-wrapper2 a:hover {
+  text-decoration: none;
+  background: #9dd9d2;
+  transition: all 0.6s;
+  color: #fc965a;
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=message.css.map */
