--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="container-fluid">
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
-        <div class="row pt-5">
+        <div class="row">
             <div class="col-md-3 menu background-orange">
                 <button class="mt-3 btn peach-gradient btn-select">
                     <a href="{{ path('tag_plat', {tag:'pizza'}) }}">
