--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Noot Noot Food !{% endblock %}
+{% block title %}Accueil Noot Noot Food !{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
