--- a/templates/plats/index.html.twig
+++ b/templates/plats/index.html.twig
@@ -1,43 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Plats index{% endblock %}
+{% block title %}Plats Noot Noot Food{% endblock %}
 
 {% block body %}
-    <h1>Plats index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Description</th>
-                <th>Image</th>
-                <th>Tag</th>
-                <th>Prix</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for plat in plats %}
-            <tr>
-                <td>{{ plat.id }}</td>
-                <td>{{ plat.nom }}</td>
-                <td>{{ plat.description }}</td>
-                <td>{{ plat.image }}</td>
-                <td>{{ plat.tag }}</td>
-                <td>{{ plat.prix }}</td>
-                <td>
-                    <a href="{{ path('plats_show', {'id': plat.id}) }}">show</a>
-                    <a href="{{ path('plats_edit', {'id': plat.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('plats_new') }}">Create new</a>
+    <div class="container-fluid">
+        <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+        <div class="row">
+            <div class="col-md-3 menu background-orange">
+                {% include 'menu.html.twig' %}
+            </div>
+            <div class="col-md-9 choix">
+                <div class="container">
+                    <div class="row">
+                        {% for plat in plats %}
+                            <div class="col-md-4 mt-5">
+                                <div class="card-container">
+                                    <div class="card">
+                                        <div class="front">
+                                            <div class="cover">
+                                                <img src="{{ plat.image }}"/>
+                                            </div>
+                                            <div class="content">
+                                                <div class="main">
+                                                    <h3 class="name">{{ plat.nom }}</h3>
+                                                    <br>
+                                                    {{ plat.prix }}
+                                                </div>
+                                            </div>
+                                        </div> <!-- end front panel -->
+                                        <div class="back">
+                                            <div class="content">
+                                                <div class="main">
+                                                    <h4 class="text-center mt-3 menuDescription">{{ plat.description }}
+                                                        <br>
+                                                        <br>
+                                                        <hr>
+                                                        <!-- Button -->
+                                                        <a href="{{ path('plat', {'id':plat.id}) }}"
+                                                           class="btn btn-orange">
+                                                            J'ai les crocs,<br>je commande ça !
+                                                        </a>
+                                                    </h4>
+                                                </div>
+                                            </div>
+                                        </div> <!-- end back panel -->
+                                    </div> <!-- end card -->
+                                </div> <!-- end card-container -->
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
