--- a/templates/plats/tag.html.twig
+++ b/templates/plats/tag.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ tag }}{% endblock %}
+{% block title %}{{ tag }} Noot Noot Food{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
