clean de la dev

--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -20,12 +20,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 pt-5 d-flex justify-content-center">
-                        <h2>{{ plats.nom }}</h2>
+                        <h2>{{ plat.nom }}</h2>
                         </div>
                     </div>
                 <div class="row">
                     <div class="col-md-6 p-5 d-flex justify-content-center">
-                        <p>{{ plats.description }}</p>
+                        <p>{{ plat.description }}</p>
                     </div>
                     <div class="col-md-6 p-5 d-flex justify-content-end">
                         <img src="https://via.placeholder.com/150" alt="placeholder">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 pr-5 d-flex justify-content-center">
-                        <p>{{ plats.prix }}</p>
+                        <p>{{ plat.prix }}</p>
                     </div>
                 </div>
                 </div>
