--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -50,7 +50,7 @@
                                                         <br><br>
                                                         <hr>
                                                         <!-- Button -->
-                                                        <a href="{{ path('plat', {'id':plat.id}) }}" class="btn btn-orange">
+                                                        <a href="{{ path('menu', {'id':plat.id}) }}" class="btn btn-orange">
                                                             J'ai les crocs,<br>je commande ça !
                                                         </a>
                                                     </h4>
