site presque ok
bientôt fini

--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -28,7 +28,7 @@
                         <p>{{ plat.description }}</p>
                     </div>
                     <div class="col-md-6 p-5 d-flex justify-content-end">
-                        <img src="https://via.placeholder.com/150" alt="placeholder">
+                        <img src="{{ plat.image }}" alt="placeholder">
                     </div>
                 </div>
                 <div class="row">
