--- a/templates/plats/tag.html.twig
+++ b/templates/plats/tag.html.twig
@@ -18,7 +18,7 @@
                                     <div class="card">
                                         <div class="front">
                                             <div class="cover">
-                                                {#<img src="{{ plat.image }}"/>#}
+                                                <img src="{{ plat.image }}"/>
                                             </div>
                                             <div class="content">
                                                 <div class="main">
