--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                 <img class="pt-4 w-25" src="{{ asset('image/logo_nootnoot.png') }}" alt="logo">
             </div>
             <div class="row justify-content-end">
-                <div class="submit-wrapper justify-content-start">
+                <div class="submit-wrapper3 justify-content-start">
                     <a href="{{ path('accueil') }}">ACCUEIL</a>
                 </div>
             </div>
