--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -33,7 +33,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 pr-5 d-flex justify-content-center">
-                        <p>{{ plat.prix }}</p>
+                        <h4>{{ plat.prix }}</h4>
                     </div>
                 </div>
                 </div>
