--- a/templates/plats/index.html.twig
+++ b/templates/plats/index.html.twig
@@ -36,7 +36,7 @@
                                                         <br>
                                                         <hr>
                                                         <!-- Button -->
-                                                        <a href="{{ path('menu', {'id':plat.id}) }}"
+                                                        <a href="{{ path('menu', {'id':plats.id}) }}"
                                                            class="btn btn-orange">
                                                             J'ai les crocs,<br>je commande ça !
                                                         </a>
