faute orthographe corrigée

--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -5,7 +5,7 @@
                 <div id="pop-up">
                     <!-- <img src="images/cross.png"> -->
                     <div class="container message">
-                        <h1>VOTRE MESSAGE A BIEN ETE ENVOYE</h1>
+                        <h1>VOTRE COMMANDE A BIEN ÉTÉ ENVOYÉE</h1>
                         <p>Message de la part de <strong>4 meufs</strong> et <strong>2 gars</strong>.</p>
                         <p><strong>MERCI !</strong></p>
                         <div class="cross"><i class="fa fa-times" style="color: #fff;"></i></div>
